Fix missing `ownedCrates` after authentication

--- a/app/components/owned-crate-row.hbs
+++ b/app/components/owned-crate-row.hbs
@@ -1,4 +1,4 @@
-<li ...attributes>
+<li data-test-owned-crate={{this.name}} ...attributes>
   <Input
     @type="checkbox"
     @name={{this.controlId}}
