--- a/app/components/api-token-row.hbs
+++ b/app/components/api-token-row.hbs
@@ -17,22 +17,16 @@
 
   {{#unless this.api_token.isNew}}
     <div local-class='dates'>
-      <div data-test-created-at>
-        <span class='small' title={{this.api_token.created_at}}>
-          Created {{moment-from-now this.api_token.created_at}}
-        </span>
-      </div>
-      {{#if this.api_token.last_used_at}}
-        <div data-test-last-used-at>
-          <span class='small' title={{this.api_token.last_used_at}}>
-            Last used {{moment-from-now this.api_token.last_used_at}}
-          </span>
-        </div>
-      {{else}}
-        <div data-test-last-used-at>
-          <span class='small'>Never used</span>
-        </div>
-      {{/if}}
+      <span title={{this.api_token.created_at}} local-class="created-at" data-test-created-at>
+        Created {{moment-from-now this.api_token.created_at}}
+      </span>
+      <span title={{this.api_token.last_used_at}} local-class="last-used-at" data-test-last-used-at>
+        {{#if this.api_token.last_used_at}}
+          Last used {{moment-from-now this.api_token.last_used_at}}
+        {{else}}
+          Never used
+        {{/if}}
+      </span>
     </div>
   {{/unless}}
 
