EmailInput: Add `friendly-message` CSS module class

--- a/app/components/email-input.hbs
+++ b/app/components/email-input.hbs
@@ -1,6 +1,6 @@
 <div ...attributes>
   {{#if this.emailIsNull }}
-    <div class='friendly-message'>
+    <div local-class="friendly-message">
       <p>
         Please add your email address. We will only use
         it to contact you about your account. We promise we'll never share it!
