--- a/app/components/email-input.module.scss
+++ b/app/components/email-input.module.scss
@@ -1,3 +1,9 @@
+.friendly-message {
+    width: 95%;
+    margin-left: auto;
+    margin-right: auto;
+}
+
 .save-button,
 .cancel-button,
 .edit-button,
