EmailInput: Add `verified` CSS module class

--- a/app/components/email-input.hbs
+++ b/app/components/email-input.hbs
@@ -35,7 +35,7 @@
         <dd class='no-space-left'>
           {{ this.user.email }}
           {{#if this.user.email_verified}}
-            <span class='verified'>Verified!</span>
+            <span local-class="verified">Verified!</span>
           {{/if}}
         </dd>
       </div>
