--- a/app/components/email-input.module.scss
+++ b/app/components/email-input.module.scss
@@ -4,6 +4,11 @@
     margin-right: auto;
 }
 
+.verified {
+    color: green;
+    font-weight: bold;
+}
+
 .actions {
     display: flex;
     align-items: center;
