EmailInput: Add margin to `save-button` CSS module class

--- a/app/components/email-input.hbs
+++ b/app/components/email-input.hbs
@@ -21,7 +21,7 @@
           </div>
         {{/if}}
         <div local-class="actions">
-          <button type='submit' local-class="save-button" class='space-right' disabled={{this.disableSave}}>Save</button>
+          <button type='submit' local-class="save-button" disabled={{this.disableSave}}>Save</button>
           <button type="button" local-class="cancel-button" {{action 'cancelEdit'}}>Cancel</button>
         </div>
       </form>
