--- a/app/components/email-input.module.scss
+++ b/app/components/email-input.module.scss
@@ -24,3 +24,7 @@
 .resend-button {
     composes: yellow-button small from '../styles/shared/buttons.module.scss';
 }
+
+.save-button {
+    margin-right: 10px;
+}
