--- a/app/components/email-input.module.scss
+++ b/app/components/email-input.module.scss
@@ -13,6 +13,11 @@
     font-weight: bold;
 }
 
+.input {
+    width: 400px;
+    margin-right: 10px;
+}
+
 .actions {
     display: flex;
     align-items: center;
