--- a/app/components/email-input.hbs
+++ b/app/components/email-input.hbs
@@ -10,7 +10,7 @@
 
   {{#if this.isEditing }}
     <div class='row'>
-      <div class='label'>
+      <div local-class="label">
         <dt>Email</dt>
       </div>
       <form class='email-form' {{action 'saveEmail' on='submit'}}>
@@ -28,7 +28,7 @@
     </div>
   {{else}}
     <div class='row'>
-      <div class='label'>
+      <div local-class="label">
         <dt>Email</dt>
       </div>
       <div local-class="email-column">
@@ -45,7 +45,7 @@
     </div>
     {{#if this.emailNotVerified }}
       <div class='row'>
-        <div class='label'>
+        <div local-class="label">
           {{#if this.user.email_verification_sent}}
             <p>We have sent a verification email to your address.</p>
           {{/if}}
@@ -60,7 +60,7 @@
     {{/if}}
     {{#if this.isError}}
       <div class='row'>
-        <div class='label'>
+        <div local-class="label">
           <p>{{this.emailError}}</p>
         </div>
       </div>
