--- a/app/components/email-input.hbs
+++ b/app/components/email-input.hbs
@@ -13,7 +13,7 @@
       <div local-class="label">
         <dt>Email</dt>
       </div>
-      <form class='email-form' {{action 'saveEmail' on='submit'}}>
+      <form local-class="email-form" {{action 'saveEmail' on='submit'}}>
         <Input @type={{this.type}} @value={{this.value}} placeholder="Email" local-class="input" />
         {{#if this.notValidEmail }}
           <div class='error'>
