--- a/app/components/email-input.hbs
+++ b/app/components/email-input.hbs
@@ -9,7 +9,7 @@
   {{/if}}
 
   {{#if this.isEditing }}
-    <div class='row'>
+    <div local-class="row">
       <div local-class="label">
         <dt>Email</dt>
       </div>
@@ -27,7 +27,7 @@
       </form>
     </div>
   {{else}}
-    <div class='row'>
+    <div local-class="row">
       <div local-class="label">
         <dt>Email</dt>
       </div>
@@ -44,7 +44,7 @@
       </div>
     </div>
     {{#if this.emailNotVerified }}
-      <div class='row'>
+      <div local-class="row">
         <div local-class="label">
           {{#if this.user.email_verification_sent}}
             <p>We have sent a verification email to your address.</p>
@@ -59,7 +59,7 @@
       </div>
     {{/if}}
     {{#if this.isError}}
-      <div class='row'>
+      <div local-class="row">
         <div local-class="label">
           <p>{{this.emailError}}</p>
         </div>
