me.index: Convert `#me-email` to CSS module class

--- a/app/styles/me/index.module.scss
+++ b/app/styles/me/index.module.scss
@@ -23,6 +23,14 @@
     }
 }
 
+.me-email {
+    border-bottom: 5px solid $gray-border;
+    padding-bottom: 20px;
+    margin-bottom: 20px;
+    display: flex;
+    flex-direction: column;
+}
+
 .select-all-button,
 .deselect-all-button {
     composes: yellow-button small from '../shared/buttons.module.scss';
