--- a/app/templates/me/index.hbs
+++ b/app/templates/me/index.hbs
@@ -20,7 +20,7 @@
   </div>
 </div>
 
-<div id='me-email'>
+<div local-class="me-email">
   <h2>User Email</h2>
   <EmailInput @type="email" @value={{this.model.user.email}} @user={{this.model.user}} />
 </div>
