--- a/app/styles/me/index.module.scss
+++ b/app/styles/me/index.module.scss
@@ -31,6 +31,11 @@
     flex-direction: column;
 }
 
+.notifications-row {
+    display: flex;
+    flex-direction: row;
+}
+
 .select-all-button,
 .deselect-all-button {
     composes: yellow-button small from '../shared/buttons.module.scss';
