me.index: Convert remaining styles to CSS module classes

--- a/app/components/owned-crate-row.hbs
+++ b/app/components/owned-crate-row.hbs
@@ -1,4 +1,4 @@
-<li data-test-owned-crate={{this.name}} ...attributes>
+<li local-class="row" data-test-owned-crate={{this.name}} ...attributes>
   <Input
     @type="checkbox"
     @name={{this.controlId}}
