application: Convert `subtitle` to CSS module class

--- a/app/styles/application.module.scss
+++ b/app/styles/application.module.scss
@@ -51,6 +51,11 @@ noscript {
     }
 }
 
+.subtitle {
+    display: block;
+    font-size: x-small;
+}
+
 .desktop-search-form {
     display: flex;
     flex-grow: 1;
