--- a/app/templates/application.hbs
+++ b/app/templates/application.hbs
@@ -12,7 +12,7 @@
     <LinkTo @route="index">
       <h1>
         crates.io
-        <span class="subtitle">Rust Package Registry</span>
+        <span local-class="subtitle">Rust Package Registry</span>
       </h1>
     </LinkTo>
 
