--- a/app/styles/categories.module.scss
+++ b/app/styles/categories.module.scss
@@ -1,5 +1,29 @@
 /* Styles for the /categories page */
 
+.list {
+    background-color: white;
+    padding: 0 20px;
+    margin-bottom: 20px;
+}
+
+.row {
+    width: 100%;
+    border-bottom: 2px solid $gray-border;
+    padding: 20px 0;
+
+    &:last-of-type { border: none; }
+}
+
+.crate-count {
+    composes: small from './shared/typography.module.scss';
+}
+
+.description {
+    composes: small from './shared/typography.module.scss';
+    margin-top: 4px;
+    line-height: 1.2rem;
+}
+
 .categories-footer {
 	width: 100%;
 	padding: 1em;
