Dropdown: Use CSS module for container styling

--- a/app/styles/crate.scss
+++ b/app/styles/crate.scss
@@ -48,7 +48,11 @@
     justify-content: space-between;
     margin-bottom: 25px;
 
-    .dropdown-container { font-size: 85%; }
+    .dropdown-button,
+    .dropdown {
+        font-size: 85%;
+    }
+
     .dropdown-button {
         background-color: $main-bg-dark;
         padding: 10px;
