--- a/app/templates/keywords.hbs
+++ b/app/templates/keywords.hbs
@@ -15,7 +15,7 @@
 
   <div class='sort' data-test-keywords-sort>
     <span class='small'>Sort by</span>
-    <Dropdown class="dropdown-container" as |dd|>
+    <Dropdown as |dd|>
       <dd.Trigger class="dropdown dropdown-button" data-test-current-order>
         {{svg-jar "sort"}}
         {{ this.currentSortBy }}
