--- a/app/templates/me/crates.hbs
+++ b/app/templates/me/crates.hbs
@@ -16,7 +16,7 @@
 
   <div class='sort'>
     <span class='small'>Sort by</span>
-    <Dropdown class="dropdown-container" as |dd|>
+    <Dropdown as |dd|>
       <dd.Trigger class="dropdown dropdown-button">
         {{svg-jar "sort"}}
         {{ this.currentSortBy }}
