--- a/app/templates/crates.hbs
+++ b/app/templates/crates.hbs
@@ -36,7 +36,7 @@
   <div class='sort' data-test-crates-sort>
     <span class='small'>Sort by</span>
 
-    <Dropdown class="dropdown-container" as |dd|>
+    <Dropdown as |dd|>
       <dd.Trigger class="dropdown dropdown-button" data-test-current-order>
         {{svg-jar "sort"}}
         {{ this.currentSortBy }}
