--- a/app/templates/search.hbs
+++ b/app/templates/search.hbs
@@ -26,7 +26,7 @@
     <div class='sort' data-test-search-sort>
       <span class='small'>Sort by </span>
 
-      <Dropdown class="dropdown-container" as |dd|>
+      <Dropdown as |dd|>
         <dd.Trigger class="dropdown dropdown-button" data-test-current-order>
           {{svg-jar "sort"}}
           {{ this.currentSortBy }}
