--- a/app/styles/application.module.scss
+++ b/app/styles/application.module.scss
@@ -20,6 +20,23 @@ body {
     align-items: center;
 }
 
+a {
+    color: $link-color;
+    text-decoration: none;
+
+    &:hover {
+        color: darken($link-color, 10%);
+    }
+}
+
+pre {
+    background: $main-color;
+    color: white;
+    padding: 20px;
+    // Use the modern font stack inspired by Bootstrap 4
+    font-family: SFMono-Regular, Menlo, Monaco, Consolas, "Liberation Mono", "Courier New", monospace;
+}
+
 abbr[title] {
     text-decoration: none;
     border-bottom: 1px dotted;
