--- a/app/templates/crate/versions.hbs
+++ b/app/templates/crate/versions.hbs
@@ -1,27 +1,23 @@
-<div class='all-versions-back'>
-  <LinkTo @route="crate" @model={{this.model}}>&#11013; Back to Main Page</LinkTo>
-</div>
+<LinkTo @route="crate" @model={{this.model}} local-class="back-link">&#11013; Back to Main Page</LinkTo>
 
-<div class='info'>
-  <span class='small'>
-    All <strong>{{ this.model.versions.length }}</strong>
-    versions of <strong>{{ this.model.name }}</strong> since
-    {{moment-format this.model.created_at 'LL'}}
-  </span>
-</div>
+<span local-class="page-description" data-test-page-description>
+  All <strong>{{ this.model.versions.length }}</strong>
+  versions of <strong>{{ this.model.name }}</strong> since
+  {{moment-format this.model.created_at 'LL'}}
+</span>
 
-<div local-class='list' class='white-rows'>
+<div local-class="list">
   {{#each this.model.versions as |version|}}
-    <div class='row'>
+    <div local-class="row">
       <div>
         <LinkTo @route="crate.version" @model={{version.num}}>{{ version.num }}</LinkTo>
 
-        <span class='small'>{{moment-format version.created_at 'LL'}}</span>
+        <span local-class="date">{{moment-format version.created_at 'LL'}}</span>
         {{#if version.yanked}}
           <span local-class='yanked'>yanked</span>
         {{/if}}
       </div>
-      <LinkTo @route="crate.version" @model={{version.num}} class="arrow">
+      <LinkTo @route="crate.version" @model={{version.num}} local-class="arrow">
         {{svg-jar "right-arrow"}}
       </LinkTo>
     </div>
