styles: Move global `h1` styling into `application` CSS module

--- a/app/styles/application.module.scss
+++ b/app/styles/application.module.scss
@@ -20,6 +20,12 @@ body {
     align-items: center;
 }
 
+h1 {
+    @media only screen and (max-width: 400px) {
+        font-size: 1.5em;
+    }
+}
+
 a {
     color: $link-color;
     text-decoration: none;
