Remove unused `dropdown` CSS class assignments

--- a/app/templates/me/crates.hbs
+++ b/app/templates/me/crates.hbs
@@ -17,7 +17,7 @@
   <div class='sort'>
     <span class='small'>Sort by</span>
     <Dropdown as |dd|>
-      <dd.Trigger class="dropdown dropdown-button">
+      <dd.Trigger class="dropdown-button">
         {{svg-jar "sort"}}
         {{ this.currentSortBy }}
       </dd.Trigger>
