--- a/app/templates/search.hbs
+++ b/app/templates/search.hbs
@@ -27,7 +27,7 @@
       <span class='small'>Sort by </span>
 
       <Dropdown as |dd|>
-        <dd.Trigger class="dropdown dropdown-button" data-test-current-order>
+        <dd.Trigger class="dropdown-button" data-test-current-order>
           {{svg-jar "sort"}}
           {{ this.currentSortBy }}
         </dd.Trigger>
