--- a/app/templates/application.hbs
+++ b/app/templates/application.hbs
@@ -41,7 +41,7 @@
       </LinkTo>
       <span local-class="sep">|</span>
       <Dropdown as |dd|>
-        <dd.Trigger class="dropdown" local-class="dropdown-button">
+        <dd.Trigger local-class="dropdown-button">
           Docs
         </dd.Trigger>
 
@@ -65,7 +65,7 @@
       <span local-class="sep">|</span>
       {{#if this.session.currentUser}}
         <Dropdown data-test-user-menu as |dd|>
-          <dd.Trigger class="dropdown" local-class="dropdown-button" data-test-toggle>
+          <dd.Trigger local-class="dropdown-button" data-test-toggle>
             <UserAvatar @user={{this.session.currentUser}} @size="small" data-test-avatar />
             {{ this.session.currentUser.name }}
           </dd.Trigger>
@@ -87,7 +87,7 @@
 
     <div local-class='menu'>
       <Dropdown as |dd|>
-        <dd.Trigger class="dropdown" local-class="dropdown-button">
+        <dd.Trigger local-class="dropdown-button">
           Menu
         </dd.Trigger>
         <dd.Content @tagName="ul" class="dropdown" local-class="current-user-links">
