--- a/app/templates/category/index.hbs
+++ b/app/templates/category/index.hbs
@@ -49,7 +49,7 @@
   <div class='sort' data-test-category-sort>
     <span class='small'>Sort by</span>
     <Dropdown as |dd|>
-      <dd.Trigger class="dropdown dropdown-button" data-test-current-order>
+      <dd.Trigger class="dropdown-button" data-test-current-order>
         {{svg-jar "sort"}}
         {{ this.currentSortBy }}
       </dd.Trigger>
