--- a/app/templates/application.hbs
+++ b/app/templates/application.hbs
@@ -45,21 +45,23 @@
           Docs
         </dd.Trigger>
 
-        <dd.Content @tagName="ul" local-class="doc-links" class="dropdown">
-          <li><a href='https://doc.rust-lang.org/cargo/getting-started/'>Getting Started</a></li>
-          <li><a href='https://doc.rust-lang.org/cargo/guide/'>Guide</a></li>
-          <li><a href='https://doc.rust-lang.org/cargo/reference/specifying-dependencies.html'>Specifying Dependencies</a></li>
-          <li><a href='https://doc.rust-lang.org/cargo/reference/publishing.html'>Publishing on crates.io</a></li>
-          <li><a href='https://doc.rust-lang.org/cargo/faq.html'>FAQ</a></li>
-          <li><a href='https://doc.rust-lang.org/cargo/reference/manifest.html'>Cargo.toml Format</a></li>
-          <li><a href='https://doc.rust-lang.org/cargo/reference/build-scripts.html'>Build Scripts</a></li>
-          <li><a href='https://doc.rust-lang.org/cargo/reference/config.html'>Configuration</a></li>
-          <li><a href='https://doc.rust-lang.org/cargo/reference/pkgid-spec.html'>Package ID specs</a></li>
-          <li><a href='https://doc.rust-lang.org/cargo/reference/environment-variables.html'>Environment Variables</a></li>
-          <li><a href='https://doc.rust-lang.org/cargo/reference/source-replacement.html'>Source Replacement</a></li>
-          <li><a href='https://doc.rust-lang.org/cargo/reference/external-tools.html'>External Tools</a></li>
-          <li><LinkTo @route="policies">Policies</LinkTo></li>
-          <li><LinkTo @route="category-slugs">List of category slugs</LinkTo></li>
+        <dd.Content local-class="doc-links" class="dropdown">
+          <ul>
+            <li><a href='https://doc.rust-lang.org/cargo/getting-started/'>Getting Started</a></li>
+            <li><a href='https://doc.rust-lang.org/cargo/guide/'>Guide</a></li>
+            <li><a href='https://doc.rust-lang.org/cargo/reference/specifying-dependencies.html'>Specifying Dependencies</a></li>
+            <li><a href='https://doc.rust-lang.org/cargo/reference/publishing.html'>Publishing on crates.io</a></li>
+            <li><a href='https://doc.rust-lang.org/cargo/faq.html'>FAQ</a></li>
+            <li><a href='https://doc.rust-lang.org/cargo/reference/manifest.html'>Cargo.toml Format</a></li>
+            <li><a href='https://doc.rust-lang.org/cargo/reference/build-scripts.html'>Build Scripts</a></li>
+            <li><a href='https://doc.rust-lang.org/cargo/reference/config.html'>Configuration</a></li>
+            <li><a href='https://doc.rust-lang.org/cargo/reference/pkgid-spec.html'>Package ID specs</a></li>
+            <li><a href='https://doc.rust-lang.org/cargo/reference/environment-variables.html'>Environment Variables</a></li>
+            <li><a href='https://doc.rust-lang.org/cargo/reference/source-replacement.html'>Source Replacement</a></li>
+            <li><a href='https://doc.rust-lang.org/cargo/reference/external-tools.html'>External Tools</a></li>
+            <li><LinkTo @route="policies">Policies</LinkTo></li>
+            <li><LinkTo @route="category-slugs">List of category slugs</LinkTo></li>
+          </ul>
         </dd.Content>
       </Dropdown>
       <span local-class="sep">|</span>
@@ -70,11 +72,13 @@
             {{ this.session.currentUser.name }}
           </dd.Trigger>
 
-          <dd.Content @tagName="ul" class="dropdown" local-class="current-user-links">
-            <li><LinkTo @route="dashboard">Dashboard</LinkTo></li>
-            <li><LinkTo @route="me">Account Settings</LinkTo></li>
-            <li><LinkTo @route="me.pending-invites">Owner Invites</LinkTo></li>
-            <li local-class="menu-item-with-separator"><LinkTo @route="logout">Sign Out</LinkTo></li>
+          <dd.Content class="dropdown" local-class="current-user-links">
+            <ul>
+              <li><LinkTo @route="dashboard">Dashboard</LinkTo></li>
+              <li><LinkTo @route="me">Account Settings</LinkTo></li>
+              <li><LinkTo @route="me.pending-invites">Owner Invites</LinkTo></li>
+              <li local-class="menu-item-with-separator"><LinkTo @route="logout">Sign Out</LinkTo></li>
+            </ul>
           </dd.Content>
         </Dropdown>
       {{else}}
@@ -90,16 +94,18 @@
         <dd.Trigger local-class="dropdown-button">
           Menu
         </dd.Trigger>
-        <dd.Content @tagName="ul" class="dropdown" local-class="current-user-links">
-          <li><LinkTo @route="crates">Browse All Crates</LinkTo></li>
-          {{#if this.session.currentUser}}
-            <li><LinkTo @route="dashboard">Dashboard</LinkTo></li>
-            <li><LinkTo @route="me" data-test-me-link>Account Settings</LinkTo></li>
-            <li><LinkTo @route="me.pending-invites">Owner Invites</LinkTo></li>
-            <li local-class="menu-item-with-separator"><LinkTo @route="logout">Sign Out</LinkTo></li>
-          {{else}}
-            <li><LinkTo @route="login">Log in with GitHub</LinkTo></li>
-          {{/if}}
+        <dd.Content class="dropdown" local-class="current-user-links">
+          <ul>
+            <li><LinkTo @route="crates">Browse All Crates</LinkTo></li>
+            {{#if this.session.currentUser}}
+              <li><LinkTo @route="dashboard">Dashboard</LinkTo></li>
+              <li><LinkTo @route="me" data-test-me-link>Account Settings</LinkTo></li>
+              <li><LinkTo @route="me.pending-invites">Owner Invites</LinkTo></li>
+              <li local-class="menu-item-with-separator"><LinkTo @route="logout">Sign Out</LinkTo></li>
+            {{else}}
+              <li><LinkTo @route="login">Log in with GitHub</LinkTo></li>
+            {{/if}}
+          </ul>
         </dd.Content>
       </Dropdown>
     </div>
