--- a/app/templates/categories.hbs
+++ b/app/templates/categories.hbs
@@ -21,17 +21,19 @@
         {{ this.currentSortBy }}
       </dd.Trigger>
 
-      <dd.Content @tagName="ul" class="dropdown">
-        <li>
-          <LinkTo @query={{hash sort="alpha"}}>
-            Alphabetical
-          </LinkTo>
-        </li>
-        <li>
-          <LinkTo @query={{hash sort="crates"}}>
-            # Crates
-          </LinkTo>
-        </li>
+      <dd.Content class="dropdown">
+        <ul>
+          <li>
+            <LinkTo @query={{hash sort="alpha"}}>
+              Alphabetical
+            </LinkTo>
+          </li>
+          <li>
+            <LinkTo @query={{hash sort="crates"}}>
+              # Crates
+            </LinkTo>
+          </li>
+        </ul>
       </dd.Content>
     </Dropdown>
   </div>
