--- a/app/templates/search.hbs
+++ b/app/templates/search.hbs
@@ -32,32 +32,34 @@
           {{ this.currentSortBy }}
         </dd.Trigger>
 
-        <dd.Content @tagName="ul" class="dropdown">
-          <li>
-            <LinkTo @query={{hash page=1 sort="relevance"}}>
-              Relevance
-            </LinkTo>
-          </li>
-          <li>
-            <LinkTo @query={{hash page=1 sort="downloads"}}>
-              All-Time Downloads
-            </LinkTo>
-          </li>
-          <li>
-            <LinkTo @query={{hash page=1 sort="recent-downloads"}}>
-              Recent Downloads
-            </LinkTo>
-          </li>
-          <li>
-            <LinkTo @query={{hash page=1 sort="recent-updates"}}>
-              Recent Updates
-            </LinkTo>
-          </li>
-          <li>
-            <LinkTo @query={{hash page=1 sort="new"}}>
-              Newly Added
-            </LinkTo>
-          </li>
+        <dd.Content class="dropdown">
+          <ul>
+            <li>
+              <LinkTo @query={{hash page=1 sort="relevance"}}>
+                Relevance
+              </LinkTo>
+            </li>
+            <li>
+              <LinkTo @query={{hash page=1 sort="downloads"}}>
+                All-Time Downloads
+              </LinkTo>
+            </li>
+            <li>
+              <LinkTo @query={{hash page=1 sort="recent-downloads"}}>
+                Recent Downloads
+              </LinkTo>
+            </li>
+            <li>
+              <LinkTo @query={{hash page=1 sort="recent-updates"}}>
+                Recent Updates
+              </LinkTo>
+            </li>
+            <li>
+              <LinkTo @query={{hash page=1 sort="new"}}>
+                Newly Added
+              </LinkTo>
+            </li>
+          </ul>
         </dd.Content>
       </Dropdown>
     </div>
