--- a/app/templates/category/index.hbs
+++ b/app/templates/category/index.hbs
@@ -54,7 +54,7 @@
         {{ this.currentSortBy }}
       </dd.Trigger>
 
-      <dd.Content class="dropdown">
+      <dd.Content>
         <ul>
           <li>
             <LinkTo @query={{hash sort="alpha"}}>
