--- a/app/templates/crates.hbs
+++ b/app/templates/crates.hbs
@@ -42,7 +42,7 @@
         {{ this.currentSortBy }}
       </dd.Trigger>
 
-      <dd.Content class="dropdown">
+      <dd.Content>
         <ul>
           <li>
             <LinkTo @query={{hash page=1 sort="alpha"}}>
