--- a/app/templates/keyword/index.hbs
+++ b/app/templates/keyword/index.hbs
@@ -22,7 +22,7 @@
         {{ this.currentSortBy }}
       </dd.Trigger>
 
-      <dd.Content class="dropdown">
+      <dd.Content>
         <ul>
           <li>
             <LinkTo @query={{hash sort="alpha"}}>
