--- a/app/templates/keywords.hbs
+++ b/app/templates/keywords.hbs
@@ -21,7 +21,7 @@
         {{ this.currentSortBy }}
       </dd.Trigger>
 
-      <dd.Content class="dropdown">
+      <dd.Content>
         <ul>
           <li>
             <LinkTo @query={{hash sort="alpha"}}>
