--- a/app/templates/search.hbs
+++ b/app/templates/search.hbs
@@ -32,7 +32,7 @@
           {{ this.currentSortBy }}
         </dd.Trigger>
 
-        <dd.Content class="dropdown">
+        <dd.Content>
           <ul>
             <li>
               <LinkTo @query={{hash page=1 sort="relevance"}}>
