--- a/app/templates/crates.hbs
+++ b/app/templates/crates.hbs
@@ -43,7 +43,7 @@
       </dd.Trigger>
 
       <dd.Content>
-        <ul>
+        <ul class="dropdown-menu">
           <li>
             <LinkTo @query={{hash page=1 sort="alpha"}}>
               Alphabetical
