--- a/app/components/dropdown/content.hbs
+++ b/app/components/dropdown/content.hbs
@@ -1,1 +1,1 @@
-<div class="dropdown {{if @isExpanded "open"}}" ...attributes>{{yield}}</div>
+<div local-class="dropdown {{if @isExpanded "open"}}" ...attributes>{{yield}}</div>
