--- a/app/styles/app.scss
+++ b/app/styles/app.scss
@@ -31,19 +31,7 @@ span.small {
     }
 }
 
-.dropdown {
-    position: absolute;
-    display: none;
-    width: 100%;
-    z-index: 10;
-
-    &.open {
-        display: block;
-    }
-}
-
-ul.dropdown,
-.dropdown ul {
+ul.dropdown-menu {
     margin: 0;
     text-align: left;
     padding: 0;
