--- a/app/templates/category/index.hbs
+++ b/app/templates/category/index.hbs
@@ -55,7 +55,7 @@
       </dd.Trigger>
 
       <dd.Content>
-        <ul>
+        <ul class="dropdown-menu">
           <li>
             <LinkTo @query={{hash sort="alpha"}}>
               Alphabetical
