--- a/app/templates/me/following.hbs
+++ b/app/templates/me/following.hbs
@@ -21,7 +21,7 @@
       </dd.Trigger>
 
       <dd.Content>
-        <ul>
+        <ul class="dropdown-menu">
           <li>
             <LinkTo @query={{hash sort="alpha"}}>
               Alphabetical
