--- a/app/templates/search.hbs
+++ b/app/templates/search.hbs
@@ -33,7 +33,7 @@
         </dd.Trigger>
 
         <dd.Content>
-          <ul>
+          <ul class="dropdown-menu">
             <li>
               <LinkTo @query={{hash page=1 sort="relevance"}}>
                 Relevance
