Dropdown: Extract `Menu` subcomponent

--- a/app/components/dropdown.hbs
+++ b/app/components/dropdown.hbs
@@ -6,5 +6,6 @@
   {{yield (hash
     Trigger=(component "dropdown/trigger" toggle=(action "toggleDropdown"))
     Content=(component "dropdown/content" isExpanded=this.dropdownExpanded)
+    Menu=(component "dropdown/menu" Content=(component "dropdown/content" isExpanded=this.dropdownExpanded))
   )}}
 </div>
