--- a/app/templates/application.hbs
+++ b/app/templates/application.hbs
@@ -45,24 +45,22 @@
           Docs
         </dd.Trigger>
 
-        <dd.Content local-class="doc-links">
-          <ul class="dropdown-menu">
-            <li><a href='https://doc.rust-lang.org/cargo/getting-started/'>Getting Started</a></li>
-            <li><a href='https://doc.rust-lang.org/cargo/guide/'>Guide</a></li>
-            <li><a href='https://doc.rust-lang.org/cargo/reference/specifying-dependencies.html'>Specifying Dependencies</a></li>
-            <li><a href='https://doc.rust-lang.org/cargo/reference/publishing.html'>Publishing on crates.io</a></li>
-            <li><a href='https://doc.rust-lang.org/cargo/faq.html'>FAQ</a></li>
-            <li><a href='https://doc.rust-lang.org/cargo/reference/manifest.html'>Cargo.toml Format</a></li>
-            <li><a href='https://doc.rust-lang.org/cargo/reference/build-scripts.html'>Build Scripts</a></li>
-            <li><a href='https://doc.rust-lang.org/cargo/reference/config.html'>Configuration</a></li>
-            <li><a href='https://doc.rust-lang.org/cargo/reference/pkgid-spec.html'>Package ID specs</a></li>
-            <li><a href='https://doc.rust-lang.org/cargo/reference/environment-variables.html'>Environment Variables</a></li>
-            <li><a href='https://doc.rust-lang.org/cargo/reference/source-replacement.html'>Source Replacement</a></li>
-            <li><a href='https://doc.rust-lang.org/cargo/reference/external-tools.html'>External Tools</a></li>
-            <li><LinkTo @route="policies">Policies</LinkTo></li>
-            <li><LinkTo @route="category-slugs">List of category slugs</LinkTo></li>
-          </ul>
-        </dd.Content>
+        <dd.Menu local-class="doc-links" as |menu|>
+          <menu.Item><a href='https://doc.rust-lang.org/cargo/getting-started/'>Getting Started</a></menu.Item>
+          <menu.Item><a href='https://doc.rust-lang.org/cargo/guide/'>Guide</a></menu.Item>
+          <menu.Item><a href='https://doc.rust-lang.org/cargo/reference/specifying-dependencies.html'>Specifying Dependencies</a></menu.Item>
+          <menu.Item><a href='https://doc.rust-lang.org/cargo/reference/publishing.html'>Publishing on crates.io</a></menu.Item>
+          <menu.Item><a href='https://doc.rust-lang.org/cargo/faq.html'>FAQ</a></menu.Item>
+          <menu.Item><a href='https://doc.rust-lang.org/cargo/reference/manifest.html'>Cargo.toml Format</a></menu.Item>
+          <menu.Item><a href='https://doc.rust-lang.org/cargo/reference/build-scripts.html'>Build Scripts</a></menu.Item>
+          <menu.Item><a href='https://doc.rust-lang.org/cargo/reference/config.html'>Configuration</a></menu.Item>
+          <menu.Item><a href='https://doc.rust-lang.org/cargo/reference/pkgid-spec.html'>Package ID specs</a></menu.Item>
+          <menu.Item><a href='https://doc.rust-lang.org/cargo/reference/environment-variables.html'>Environment Variables</a></menu.Item>
+          <menu.Item><a href='https://doc.rust-lang.org/cargo/reference/source-replacement.html'>Source Replacement</a></menu.Item>
+          <menu.Item><a href='https://doc.rust-lang.org/cargo/reference/external-tools.html'>External Tools</a></menu.Item>
+          <menu.Item><LinkTo @route="policies">Policies</LinkTo></menu.Item>
+          <menu.Item><LinkTo @route="category-slugs">List of category slugs</LinkTo></menu.Item>
+        </dd.Menu>
       </Dropdown>
       <span local-class="sep">|</span>
       {{#if this.session.currentUser}}
@@ -72,14 +70,12 @@
             {{ this.session.currentUser.name }}
           </dd.Trigger>
 
-          <dd.Content local-class="current-user-links">
-            <ul class="dropdown-menu">
-              <li><LinkTo @route="dashboard">Dashboard</LinkTo></li>
-              <li><LinkTo @route="me">Account Settings</LinkTo></li>
-              <li><LinkTo @route="me.pending-invites">Owner Invites</LinkTo></li>
-              <li local-class="menu-item-with-separator"><LinkTo @route="logout">Sign Out</LinkTo></li>
-            </ul>
-          </dd.Content>
+          <dd.Menu local-class="current-user-links" as |menu|>
+            <menu.Item><LinkTo @route="dashboard">Dashboard</LinkTo></menu.Item>
+            <menu.Item><LinkTo @route="me">Account Settings</LinkTo></menu.Item>
+            <menu.Item><LinkTo @route="me.pending-invites">Owner Invites</LinkTo></menu.Item>
+            <menu.Item local-class="menu-item-with-separator"><LinkTo @route="logout">Sign Out</LinkTo></menu.Item>
+          </dd.Menu>
         </Dropdown>
       {{else}}
         <LinkTo @route="login" data-test-login-link>
@@ -94,19 +90,17 @@
         <dd.Trigger local-class="dropdown-button">
           Menu
         </dd.Trigger>
-        <dd.Content local-class="current-user-links">
-          <ul class="dropdown-menu">
-            <li><LinkTo @route="crates">Browse All Crates</LinkTo></li>
-            {{#if this.session.currentUser}}
-              <li><LinkTo @route="dashboard">Dashboard</LinkTo></li>
-              <li><LinkTo @route="me" data-test-me-link>Account Settings</LinkTo></li>
-              <li><LinkTo @route="me.pending-invites">Owner Invites</LinkTo></li>
-              <li local-class="menu-item-with-separator"><LinkTo @route="logout">Sign Out</LinkTo></li>
-            {{else}}
-              <li><LinkTo @route="login">Log in with GitHub</LinkTo></li>
-            {{/if}}
-          </ul>
-        </dd.Content>
+        <dd.Menu local-class="current-user-links" as |menu|>
+          <menu.Item><LinkTo @route="crates">Browse All Crates</LinkTo></menu.Item>
+          {{#if this.session.currentUser}}
+            <menu.Item><LinkTo @route="dashboard">Dashboard</LinkTo></menu.Item>
+            <menu.Item><LinkTo @route="me" data-test-me-link>Account Settings</LinkTo></menu.Item>
+            <menu.Item><LinkTo @route="me.pending-invites">Owner Invites</LinkTo></menu.Item>
+            <menu.Item local-class="menu-item-with-separator"><LinkTo @route="logout">Sign Out</LinkTo></menu.Item>
+          {{else}}
+            <menu.Item><LinkTo @route="login">Log in with GitHub</LinkTo></menu.Item>
+          {{/if}}
+        </dd.Menu>
       </Dropdown>
     </div>
   </nav>
