--- a/app/templates/user.hbs
+++ b/app/templates/user.hbs
@@ -27,35 +27,33 @@
             {{ this.currentSortBy }}
           </dd.Trigger>
 
-          <dd.Content>
-            <ul class="dropdown-menu">
-              <li>
-                <LinkTo @query={{hash sort="alpha"}}>
-                  Alphabetical
-                </LinkTo>
-              </li>
-              <li>
-                <LinkTo @query={{hash sort="downloads"}}>
-                  All-Time Downloads
-                </LinkTo>
-              </li>
-              <li>
-                <LinkTo @query={{hash sort="recent-downloads"}}>
-                  Recent Downloads
-                </LinkTo>
-              </li>
-              <li>
-                <LinkTo @query={{hash sort="recent-updates"}}>
-                  Recent Updates
-                </LinkTo>
-              </li>
-              <li>
-                <LinkTo @query={{hash sort="new"}}>
-                  Newly Added
-                </LinkTo>
-              </li>
-            </ul>
-          </dd.Content>
+          <dd.Menu as |menu|>
+            <menu.Item>
+              <LinkTo @query={{hash sort="alpha"}}>
+                Alphabetical
+              </LinkTo>
+            </menu.Item>
+            <menu.Item>
+              <LinkTo @query={{hash sort="downloads"}}>
+                All-Time Downloads
+              </LinkTo>
+            </menu.Item>
+            <menu.Item>
+              <LinkTo @query={{hash sort="recent-downloads"}}>
+                Recent Downloads
+              </LinkTo>
+            </menu.Item>
+            <menu.Item>
+              <LinkTo @query={{hash sort="recent-updates"}}>
+                Recent Updates
+              </LinkTo>
+            </menu.Item>
+            <menu.Item>
+              <LinkTo @query={{hash sort="new"}}>
+                Newly Added
+              </LinkTo>
+            </menu.Item>
+          </dd.Menu>
         </Dropdown>
       </div>
     </div>
