application: Remove unused `search` CSS class assignment

--- a/app/templates/application.hbs
+++ b/app/templates/application.hbs
@@ -111,7 +111,7 @@
     </div>
   </nav>
 
-  <form local-class='mobile-search' class='search' action='/search' {{ action "search" on="submit" }} >
+  <form local-class='mobile-search' action='/search' {{ action "search" on="submit" }} >
     <input
       type="text"
       local-class="search"
