Remove unused `sort` CSS class assignments

--- a/app/templates/category/index.hbs
+++ b/app/templates/category/index.hbs
@@ -46,7 +46,7 @@
     data-test-category-nav
   />
 
-  <div class='sort' data-test-category-sort>
+  <div data-test-category-sort>
     <span class='small'>Sort by</span>
     <Dropdown as |dd|>
       <dd.Trigger class="dropdown-button" data-test-current-order>
