--- a/app/templates/crates.hbs
+++ b/app/templates/crates.hbs
@@ -33,7 +33,7 @@
     data-test-crates-nav
   />
 
-  <div class='sort' data-test-crates-sort>
+  <div data-test-crates-sort>
     <span class='small'>Sort by</span>
 
     <Dropdown as |dd|>
