--- a/app/templates/keyword/index.hbs
+++ b/app/templates/keyword/index.hbs
@@ -14,7 +14,7 @@
     data-test-keyword-nav
   />
 
-  <div class='sort' data-test-keyword-sort>
+  <div data-test-keyword-sort>
     <span class='small'>Sort by</span>
     <Dropdown as |dd|>
       <dd.Trigger class="dropdown-button" data-test-current-order>
