--- a/app/templates/keywords.hbs
+++ b/app/templates/keywords.hbs
@@ -13,7 +13,7 @@
     data-test-keywords-nav
   />
 
-  <div class='sort' data-test-keywords-sort>
+  <div data-test-keywords-sort>
     <span class='small'>Sort by</span>
     <Dropdown as |dd|>
       <dd.Trigger class="dropdown-button" data-test-current-order>
