--- a/app/templates/search.hbs
+++ b/app/templates/search.hbs
@@ -23,7 +23,7 @@
       data-test-search-nav
     />
 
-    <div class='sort' data-test-search-sort>
+    <div data-test-search-sort>
       <span class='small'>Sort by </span>
 
       <Dropdown as |dd|>
