--- a/app/templates/team.hbs
+++ b/app/templates/team.hbs
@@ -26,7 +26,7 @@
         @total={{this.totalItems}}
       />
 
-      <div class='sort'>
+      <div>
         <span class='small'>Sort by</span>
         <Dropdown as |dd|>
           <dd.Trigger class="dropdown-button">
