--- a/app/templates/categories.hbs
+++ b/app/templates/categories.hbs
@@ -13,7 +13,7 @@
     data-test-categories-nav
   />
 
-  <div class='sort' data-test-categories-sort>
+  <div data-test-categories-sort>
     <span class='small'>Sort by</span>
     <Dropdown as |dd|>
       <dd.Trigger class="dropdown-button" data-test-current-order>
