--- a/app/templates/user.hbs
+++ b/app/templates/user.hbs
@@ -19,7 +19,7 @@
         @total={{this.totalItems}}
       />
 
-      <div class='sort'>
+      <div>
         <span class='small'>Sort by</span>
         <Dropdown as |dd|>
           <dd.Trigger class="dropdown-button">
