crate.version: Remove unused `license` CSS class assignment

--- a/app/templates/crate/version.hbs
+++ b/app/templates/crate/version.hbs
@@ -106,7 +106,7 @@
         {{#if this.currentVersion.license}}
           <div>
             <h3>License</h3>
-            <p class="license" data-test-license>{{ this.currentVersion.license }}</p>
+            <p data-test-license>{{ this.currentVersion.license }}</p>
           </div>
         {{/if}}
 
