crate.version: Remove unused `date` CSS class assignment

--- a/app/templates/crate/version.hbs
+++ b/app/templates/crate/version.hbs
@@ -174,7 +174,7 @@
                 <LinkTo @route="crate.version" @model={{version.num}} data-test-version-link={{version.num}}>
                   {{ version.num }}
                 </LinkTo>
-                <span class='date'>{{moment-format version.created_at 'll'}}</span>
+                {{moment-format version.created_at 'll'}}
                 {{#if version.yanked}}
                   <span local-class='yanked'>yanked</span>
                 {{/if}}
