crate.version: Remove unused `loading` CSS class assignment

--- a/app/templates/crate/version.hbs
+++ b/app/templates/crate/version.hbs
@@ -249,7 +249,7 @@
         <span class='desc small'>Downloads all time</span>
       </div>
       <div local-class='stat'>
-        <span class="{{if this.crate.versions.isPending 'loading'}}" local-class="num">
+        <span local-class="num">
           {{svg-jar "crate"}}
           <span local-class="num__align">{{ this.crate.versions.length }}</span>
         </span>
