crate.version: Convert `desc small` CSS class assignments to CSS module classes

--- a/app/styles/crate/version.module.scss
+++ b/app/styles/crate/version.module.scss
@@ -217,6 +217,10 @@
     }
 }
 
+.stat-description {
+    composes: small from '../shared/typography.module.scss';
+}
+
 .graph {
     flex-grow: 10;
     width: 100%;
